--- a/app/src/main/res/layout/activity_computer_list.xml
+++ b/app/src/main/res/layout/activity_computer_list.xml
@@ -46,7 +46,7 @@
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/computers_progressBar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
