--- a/app/src/main/res/layout/activity_computer_list.xml
+++ b/app/src/main/res/layout/activity_computer_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:background="@color/primary_light"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:layout_scrollFlags="scroll|enterAlways"
-        app:titleTextColor="@android:color/white">
+        android:theme="@style/AppToolbar">
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
@@ -26,6 +27,7 @@
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
+        android:background="@android:color/white"
         android:gravity="center"
         android:id="@+id/bottom_linear_layout"
         android:layout_width="match_parent"
@@ -35,6 +37,9 @@
         android:padding="16dp">
 
         <Button
+            android:textSize="16sp"
+            android:textColor="@color/secondary_text"
+            android:background="@null"
             android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,24 +54,31 @@
             android:orientation="horizontal">
 
             <TextView
+                android:textColor="@color/secondary_text"
+                android:textSize="16sp"
                 android:id="@+id/current_page_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                tools:text="Page 1 "/>
+                tools:text="Page 1"/>
 
             <TextView
+                android:textColor="@color/secondary_text"
+                android:textSize="16sp"
+                android:layout_marginLeft="4dp"
                 android:id="@+id/pages_total_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 tools:text="of 123"/>
 
-
         </LinearLayout>
 
 
         <Button
+            android:textSize="16sp"
+            android:textColor="@color/secondary_text"
+            android:background="@null"
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
