--- a/app/src/main/res/layout/item_computer_list.xml
+++ b/app/src/main/res/layout/item_computer_list.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:orientation="vertical"
     app:cardCornerRadius="@dimen/cardview_default_radius">
 
