--- a/app/src/main/res/layout/activity_computer_list.xml
+++ b/app/src/main/res/layout/activity_computer_list.xml
@@ -19,7 +19,7 @@
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:paddingTop="4dp"
+        android:paddingTop="@dimen/small_margin"
         android:clipToPadding="false"
         android:layout_below="@+id/list_toolbar"
         android:id="@+id/computers_list_recycler_view"
@@ -36,10 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:padding="@dimen/medium_margin">
 
         <Button
-            android:textSize="16sp"
+            android:textSize="@dimen/medium_text"
             android:textColor="@color/secondary_text"
             android:background="@null"
             android:id="@+id/previous_button"
@@ -57,7 +57,7 @@
 
             <TextView
                 android:textColor="@color/secondary_text"
-                android:textSize="16sp"
+                android:textSize="@dimen/medium_text"
                 android:id="@+id/current_page_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,19 +66,17 @@
 
             <TextView
                 android:textColor="@color/secondary_text"
-                android:textSize="16sp"
-                android:layout_marginLeft="4dp"
+                android:textSize="@dimen/medium_text"
+                android:layout_marginLeft="@dimen/small_margin"
                 android:id="@+id/pages_total_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 tools:text="of 123"/>
-
         </LinearLayout>
 
-
         <Button
-            android:textSize="16sp"
+            android:textSize="@dimen/medium_text"
             android:textColor="@color/secondary_text"
             android:background="@null"
             android:id="@+id/next_button"
@@ -86,7 +84,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/next_button_text"/>
-
     </LinearLayout>
 
     <ProgressBar
