--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -33,14 +33,14 @@
                 android:id="@+id/main_info_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp">
+                android:layout_margin="@dimen/small_margin">
 
                 <LinearLayout
                     android:id="@+id/main_info_linear_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="@dimen/default_padding">
 
                     <LinearLayout
                         android:visibility="gone"
@@ -54,7 +54,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@color/primary_text"
-                            android:textSize="16sp"
+                            android:textSize="@dimen/medium_text"
                             tools:text="Microsystems Altair Company"/>
 
                         <TextView
@@ -62,7 +62,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/company_text"
                             android:textColor="@color/colorAccent"
-                            android:textSize="14sp"/>
+                            android:textSize="@dimen/small_text"/>
 
                     </LinearLayout>
 
@@ -71,7 +71,7 @@
                         android:id="@+id/info_description_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/default_padding"
                         android:orientation="vertical">
 
                         <TextView
@@ -81,7 +81,7 @@
                             android:ellipsize="end"
                             android:maxLines="3"
                             android:textColor="@color/primary_text"
-                            android:textSize="16sp"
+                            android:textSize="@dimen/medium_text"
                             tools:text="@string/lorem_ipsum"/>
 
                         <TextView
@@ -89,7 +89,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/description_text"
                             android:textColor="@color/colorAccent"
-                            android:textSize="14sp"/>
+                            android:textSize="@dimen/small_text"/>
 
                     </LinearLayout>
 
@@ -97,7 +97,7 @@
                         android:id="@+id/info_image_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/default_padding"
                         android:visibility="gone"/>
 
                 </LinearLayout>
@@ -108,9 +108,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/main_info_card_view"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp">
+                android:layout_marginBottom="@dimen/small_margin"
+                android:layout_marginLeft="@dimen/small_margin"
+                android:layout_marginRight="@dimen/small_margin">
 
                 <!--контейнер для добавления похожих итемов динамически-->
                 <LinearLayout
@@ -119,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="16dp"
+                    android:padding="@dimen/default_padding"
                     android:visibility="gone">
                 </LinearLayout>
 
