--- a/app/src/main/res/layout/item_computer_list.xml
+++ b/app/src/main/res/layout/item_computer_list.xml
@@ -5,9 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
+    android:layout_marginBottom="@dimen/small_margin"
+    android:layout_marginLeft="@dimen/small_margin"
+    android:layout_marginRight="@dimen/small_margin"
     android:orientation="vertical"
     app:cardCornerRadius="@dimen/cardview_default_radius">
 
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary_text"
-                android:textSize="16sp"
+                android:textSize="@dimen/medium_text"
                 tools:text="Altair 8800"/>
 
             <TextView
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/computer_name_text"
-                android:textSize="14sp"
+                android:textSize="@dimen/small_text"
                 tools:text="Computer name"/>
 
         </LinearLayout>
@@ -45,7 +45,7 @@
             android:id="@+id/item_company_linear_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/default_padding"
             android:orientation="vertical"
             android:visibility="gone">
 
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary_text"
-                android:textSize="16sp"
+                android:textSize="@dimen/medium_text"
                 tools:text="Micro Instrumentation and Telemetry Systems"/>
 
             <TextView
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/company_text"
-                android:textSize="14sp"/>
+                android:textSize="@dimen/small_text"/>
         </LinearLayout>
 
     </LinearLayout>
