--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -43,11 +43,11 @@
                     android:padding="@dimen/default_padding">
 
                     <LinearLayout
-                        android:visibility="gone"
                         android:id="@+id/info_company_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
                             android:id="@+id/info_company_text_view"
@@ -67,12 +67,12 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:visibility="gone"
                         android:id="@+id/info_description_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/default_padding"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <TextView
                             android:id="@+id/info_description_text_view"
@@ -112,16 +112,34 @@
                 android:layout_marginLeft="@dimen/small_margin"
                 android:layout_marginRight="@dimen/small_margin">
 
-                <!--контейнер для добавления похожих итемов динамически-->
                 <LinearLayout
-                    android:id="@+id/similar_items_linear_layout"
+                    android:visibility="gone"
+                    android:id="@+id/info_similar_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="vertical"
                     android:padding="@dimen/default_padding"
-                    android:visibility="gone">
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/similar_items_hint"
+                        android:textColor="@color/secondary_text"
+                        android:textSize="@dimen/small_text"/>
+
+                    <!--контейнер для добавления похожих итемов динамически-->
+                    <LinearLayout
+                        android:layout_marginTop="@dimen/small_margin"
+                        android:id="@+id/similar_items_linear_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="vertical">
+                    </LinearLayout>
+
                 </LinearLayout>
+
 
             </android.support.v7.widget.CardView>
 
